--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,50 +1,39 @@
-name: Deploy Vite React to GitHub Pages
+name: Build and Deploy Vite React to Hostinger
 
 on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+push:
+branches: [ main ]
+workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+build:
+runs-on: ubuntu-latest
+steps:
+- name: Checkout Code
+uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'npm'
+```
+  - name: Setup Node.js
+    uses: actions/setup-node@v4
+    with:
+      node-version: 20
+      cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+  - name: Install Dependencies
+    run: npm ci
 
-      - name: Build
-        run: npm run build
+  - name: Build Project
+    run: npm run build
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: dist
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+  - name: Deploy Dist to Deploy Branch
+    run: |
+      git config --global user.name "github-actions"
+      git config --global user.email "github-actions@github.com"
+      git fetch origin
+      git checkout -B deploy
+      rm -rf ./*
+      cp -r dist/* .
+      git add .
+      git commit -m "Deploy build from GitHub Actions" || echo "No changes to commit"
+      git push origin deploy --force
+```
