--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,4 +46,5 @@ jobs:
           # Commit and push
           git add .
           git commit -m "Deploy build from GitHub Actions" || echo "No changes to commit"
-          git push origin deploy --force
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/easvera25/easvera.git deploy --force
+
